compiler/w_session/tests/errors/postfix-inc-dec.w
fn main(x: u32) {
    x++;
    x--;
}